# whale-of-whales

./: .gitignore  ChangeLog.md  LICENSE  README.md  config-sample.yaml  package.yaml  stack.yaml  whale-of-whales.cabal  wowz-sample
src/Javran/WoW/: Main.hs
src/Javran/Wow/: Base.hs  Default.hs  Env.hs  Main.hs  ProcessUpdate.hs  Types.hs  Util.hs  Worker.hs
src/Javran/Wow/BotModule/: BianTaiXue.hs  Chiba.hs  CommandSink.hs  Lmgtfy.hs  Repeater.hs  SendWhale.hs  SendYesOrNo.hs  SimpleRandom.hs  UserVerification.hs
