cabal-version: 1.12
name:           whale-of-whales
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/whale-of-whales#readme>
homepage:       https://github.com/githubuser/whale-of-whales#readme
bug-reports:    https://github.com/githubuser/whale-of-whales/issues
author:         Javran Cheng
maintainer:     Javran.C@gmail.com
copyright:      2019 Javran Cheng
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/whale-of-whales

executable wow
  main-is: Javran/Wow/Main.hs
  hs-source-dirs: src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -main-is Javran.Wow.Main
  other-modules:
                Javran.Wow.Types
              , Javran.Wow.Env
              , Javran.Wow.Worker
  build-depends:
                base
              , telegram-api
              , http-client
              , http-client-tls
              , time
              , mtl
              , servant-client
              , text
              , exceptions
              , random
              , uuid
  default-language: Haskell2010
